hackery/coarse-profiling/log-node-m

/home/spencertipping/conjectures/caterwaul/hackery/coarse-profiling/caterwaul.all-profiled.min.js:2
Licensed under the terms of the MIT source code license
         ^^^^^

node.js:178
        throw e; // process.nextTick error, or 'error' event on first tick
        ^
SyntaxError: Unexpected identifier
    at Module._compile (module.js:399:25)
    at Object..js (module.js:410:10)
    at Module.load (module.js:336:31)
    at Function._load (module.js:297:12)
    at Array.<anonymous> (module.js:423:10)
    at EventEmitter._tickCallback (node.js:170:26)
